--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
+    "javascript-time-ago": "^2.5.9",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
