--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.15.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
