--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
     "javascript-time-ago": "^2.5.9",
@@ -19,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.15.0",
+    "react-scrollable-feed": "^1.3.2",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.3"
   },
