--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
+    "form-data": "^4.0.0",
     "javascript-time-ago": "^2.5.9",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
